--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div id="display"></div>
+    <div id="numContainer">
+        <div id="row">
+            <button id="number">7</button>
+            <button id="number">8</button>
+            <button id="number">9</button>
+            <button id="operator">/</button>
+            <button id="clear">AC</button>
+        </div>
+        <div id="row">
+            <button id="number">4</button>
+            <button id="number">5</button>
+            <button id="number">6</button>
+            <button id="operator">*</button>
+        </div>
+        <div id="row">
+            <button id="number">1</button>
+            <button id="number">2</button>
+            <button id="number">3</button>
+            <button id="operator">-</button>
+        </div>
+        <div id="row">
+            <button id="number">0</button>
+            <button id="decimal">.</button>
+            <button id="equals">=</button>
+            <button id="operator">+</button>
+        </div>
+    </div>
 </body>
 </html>
