--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div id="display"></div>
-    <div id="numContainer">
-        <div id="row">
-            <button id="number">7</button>
-            <button id="number">8</button>
-            <button id="number">9</button>
-            <button id="operator">/</button>
-            <button id="clear">AC</button>
+    <div class="display"></div>
+    <div class="numContainer">
+        <div class="row">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">/</button>
+            <button class="clear">AC</button>
         </div>
-        <div id="row">
-            <button id="number">4</button>
-            <button id="number">5</button>
-            <button id="number">6</button>
-            <button id="operator">*</button>
+        <div class="row">
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">*</button>
         </div>
-        <div id="row">
-            <button id="number">1</button>
-            <button id="number">2</button>
-            <button id="number">3</button>
-            <button id="operator">-</button>
+        <div class="row">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator">-</button>
         </div>
-        <div id="row">
-            <button id="number">0</button>
-            <button id="decimal">.</button>
-            <button id="equals">=</button>
-            <button id="operator">+</button>
+        <div class="row">
+            <button class="number">0</button>
+            <button class="decimal">.</button>
+            <button class="equals">=</button>
+            <button class="operator">+</button>
         </div>
     </div>
 </body>
